--- a/src/App.css
+++ b/src/App.css
@@ -63,14 +63,15 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .icon{
-  color: #31D2F2;
+  color: #131313;
 }
 .h-card{
   transition: 0.5s;
 }
 .h-card:hover{
-  background-color: #31D2F2;
+  background-color: #131313;
   color: white;
   box-shadow: 5px 5px 20px rgb(51, 51, 51);
 }
@@ -97,11 +98,17 @@
 .price{
   background-color: #31d2f23f;
 }
+
+/* packages */
 .service-card-img {
   overflow: hidden;
 }
+
 .service-card-img img{
   transition: 0.8s;
+  width: 100%;
+  height: 200px;
+  border-radius: 15px;
 }
 
 .service-card-img:hover img{
@@ -110,7 +117,7 @@
 
 
 .footer{
-  background-color:#187EAE ;
+  background-color:#4e565a ;
 }
 
 
@@ -119,7 +126,7 @@
   .block{
     display: none;
   }
-
+  
   .user-div{
     display: flex;
     justify-content: space-evenly;
