--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,12 @@
   transform: scale(1.2);
 }
 
+/* order / booking */
+.order-img img{
+  width: 100px;
+  height: 50px;
+  border-radius: 5px;
+}
 
 .footer{
   background-color:#4e565a ;
