--- a/src/App.css
+++ b/src/App.css
@@ -3,21 +3,22 @@
 }
 
 /* custom css  */
+
 .z-index-h{
   z-index: 9999;
 }
 .z-index-l{
   z-index: 99;
 }
+
+
 /* colors  */
 .text-color {
   color: #222222;
 }
-
 .primary-color-bg{
   background-color: #31D2F2;
 }
-
 .secondary-color{
   color:#03425B;
 }
@@ -53,17 +54,16 @@
   border-radius: 50%;
 }
 
+
 /* banner */
 .bg-banner{
   background-color: rgba(255, 253, 253, 0.589);
 }
-
 .quality{
   background-image: url("https://image.freepik.com/free-vector/abstract-background-with-squares_23-2148995948.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 .icon{
   color: #131313;
 }
@@ -80,6 +80,7 @@
 
 }
 
+/* pricing  */
 .pricing{
   background-image: url("https://image.freepik.com/free-vector/abstract-background-with-squares_23-2148995948.jpg");
   background-repeat: no-repeat;
@@ -89,12 +90,9 @@
 .Price-card{
   transition: 0.8s;
 }
-
-
 .Price-card:hover{
   transform: scale(1.1);
 }
-
 .price{
   background-color: #31d2f23f;
 }
@@ -103,17 +101,16 @@
 .service-card-img {
   overflow: hidden;
 }
-
 .service-card-img img{
   transition: 0.8s;
   width: 100%;
   height: 200px;
   border-radius: 15px;
 }
-
 .service-card-img:hover img{
   transform: scale(1.2);
 }
+
 
 /* order / booking */
 .order-img img{
@@ -122,6 +119,7 @@
   border-radius: 5px;
 }
 
+/* footer  */
 .footer{
   background-color:#4e565a ;
 }
@@ -145,26 +143,17 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .App-header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
   }
-  to {
-    transform: rotate(360deg);
+
+  .App-link {
+    color: #61dafb;
   }
-}
